test/compiler/fail/_list_tail_types.ods
do t = tail([1, 2, 3])
do head(t) || true
